feat:add mysql connection

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-; DATABASE_URL=sqllite:///data.db
-DATABASE_URL=mysql+pymysql://localhost
+ENV_STATE=prod
+# MySQL configuration for dev environment
+DEV_DATABASE_URL=mysql+pymysql://root:1234@127.0.0.1:3308/thehealthhub
+DEV_CREATE_TABLES=False
+PROD_DATABASE_URL=mysql+pymysql://doa:1234@digitalocean.com:3306/thehealthhub
+# Fallback options
+# TEST_DATABASE_URL=sqlite:///test.db
+# PROD_DATABASE_URL=sqlite:///data.db
+# Additional MySQL parameters
