fix:add char set

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 ENV_STATE=prod
 # MySQL configuration for dev environment
-DEV_DATABASE_URL=mysql+pymysql://root:1234@127.0.0.1:3308/thehealthhub
+DEV_DATABASE_URL=mysql+pymysql://root:1234@127.0.0.1:3308/thehealthhub?charset=utf8mb4
 DEV_CREATE_TABLES=False
-PROD_DATABASE_URL=mysql+pymysql://doa:1234@digitalocean.com:3306/thehealthhub
+
+PROD_DATABASE_URL=mysql+pymysql://doa:1234@digitalocean.com:3308/thehealthhub?charset=utf8mb4
 # Fallback options
 # TEST_DATABASE_URL=sqlite:///test.db
 # PROD_DATABASE_URL=sqlite:///data.db
