feat:add charset, timezone

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 ENV_STATE=prod
 # MySQL configuration for dev environment
-DEV_DATABASE_URL=mysql+pymysql://root:1234@127.0.0.1:3308/thehealthhub?charset=utf8mb4
+DEV_DATABASE_URL=mysql+pymysql://root:1234@127.0.0.1:3308/thehealthhub?charset=utf8mb4&collation=utf8mb4_unicode_ci&use_unicode=1&connect_timeout=10&autocommit=true
 DEV_CREATE_TABLES=False
 
-PROD_DATABASE_URL=mysql+pymysql://doa:1234@digitalocean.com:3308/thehealthhub?charset=utf8mb4
+PROD_DATABASE_URL=mysql+pymysql://doa:1234@digitalocean.com:3308/thehealthhub?charset=utf8mb4&collation=utf8mb4_unicode_ci&use_unicode=1&connect_timeout=10&autocommit=true
 # Fallback options
 # TEST_DATABASE_URL=sqlite:///test.db
 # PROD_DATABASE_URL=sqlite:///data.db
